--- a/ray-rllib/06-RL-References.ipynb
+++ b/ray-rllib/06-RL-References.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RL is a deep topic and a focus of intense research. We can only scratch the surface here, but the following references may be useful.\n",
+    "RL is a deep topic and a focus of intense research. We can only scratch the surface here, but the following references may be useful. See also links in the [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) lesson and other lessons.\n",
     "\n",
     "## Books\n",
     "\n",
@@ -38,14 +38,15 @@
     "\n",
     "* [Reinforcement Learning Explained](https://www.oreilly.com/radar/reinforcement-learning-explained/), Junling Hu, 2016. A gentle introduction to the ideas of RL.\n",
     "* [A Beginner's Guide to Deep Reinforcement Learning](https://pathmind.com/wiki/deep-reinforcement-learning), Pathmind, 2019. From Pathmind, which uses RLlib for its products and services. Lots of good references at the end of this post.\n",
-    "* [An Outsider's Tour of Reinforcement Learning](http://www.argmin.net/2018/06/25/outsider-rl/), Ben Recht, 2018. A series of posts on technical aspects of RL."
+    "* [An Outsider's Tour of Reinforcement Learning](http://www.argmin.net/2018/06/25/outsider-rl/), Ben Recht, 2018. A series of posts on technical aspects of RL.\n",
+    "* [Exploration Strategies in Deep Reinforcement Learning](https://lilianweng.github.io/lil-log/2020/06/07/exploration-strategies-in-deep-reinforcement-learning.html), Lilian Weng, Jun 7, 2020."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tutorials and Academic Courses\n",
+    "## Tutorials and Academic Courses on RL\n",
     "\n",
     "* [University College London COMPM050/COMPGI13](https://www.davidsilver.uk/teaching/)\n",
     "* [UC Berkeley CS 285](http://rail.eecs.berkeley.edu/deeprlcourse/)\n",
