--- a/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
+++ b/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
@@ -20,18 +20,29 @@
     "\n",
     "A **multi-armed bandit (MAB)** ([Wikipedia](https://en.wikipedia.org/wiki/Multi-armed_bandit)) is one way to implement **online machine learning**, based on probability theory. Online machine learning is the idea of updating models as data arrives, rather than training \"offline\" using batch processes and historical data. Hence, a MAB provides a means to inform sequential decision-making about a process over time in the face of uncertainty. An analogous real-world situation is the way an investment fund manager adjusts a stock portfolio in response to evolving market conditions. \n",
     "\n",
-    "Multi-armed bandits are named after slot machines in casinos (a.k.a., _one-armed bandits_) where pulling an arm probabilistically produces a cash payout as a reward (or fails to do so). In a typical MAB implementation, a bandit will have N “arms”, one for each of N possible actions to take at a given time step."
+    "Multi-armed bandits are named after slot machines in casinos (a.k.a., _one-armed bandits_) where pulling an arm probabilistically produces a cash payout as a reward (or fails to do so). In a typical MAB implementation, a bandit will have N “arms”, one for each of N possible actions to take at a given time step.\n",
+    "\n",
+    "For simplicity, we'll often just say \"bandits\" to mean MABs."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MABs vs. Reinforcement Learning\n",
+    "## Multi-Armed Bandits vs. General Reinforcement Learning\n",
     "\n",
-    "MABs are a simplified form of RL in two aspects. First, they do not attempt to learn the best actions to take for more than one state, which is either stationary or slowly evolving (we'll explore what the latter means later). Second, the action taken only affects the reward received, but not the next state of the environment.\n",
+    "MABs are a simplified form of RL in two aspects. First, they do not attempt to learn the best actions to take for more than one state, which is either stationary or slowly evolving (we'll explore what the latter means later). Second, the action taken only affects the reward received, but not the next state of the environment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contextual Bandits\n",
     "\n",
-    "A **contextual bandit** ([Wikipedia](https://en.wikipedia.org/wiki/Multi-armed_bandit), [Ray documentation](https://docs.ray.io/en/latest/rllib-algorithms.html#contextual-bandits-contrib-bandits)) relaxes this assumption by adding access to a state, the _context_ (what we called the _environment_ for RL) that influences the decisions that are made. At each time step, the algorithm observes this context, which can change significantly from one step to the next, and decides to choose one action among the available alternatives, then observes the outcome of that decision. The outcome defines a reward. The environment can change randomly between steps.\n",
+    "A **contextual bandit** ([Wikipedia](https://en.wikipedia.org/wiki/Multi-armed_bandit), [Ray documentation](https://docs.ray.io/en/latest/rllib-algorithms.html#contextual-bandits-contrib-bandits)) relaxes the first restriction by adding access to a state, the _context_ (what we called the _environment_ for RL) that influences the decisions that are made. At each time step, the algorithm observes this context, which can change significantly from one step to the next, and decides to choose one action among the available alternatives, then observes the outcome of that decision. The outcome defines a reward. The environment can change randomly between steps.\n",
+    "\n",
+    "Returning to the inspiration of slot machines, a machine might change the images or colors it shows on the display to indicate a new context. This change could happen between each pull of the arm.\n",
     "\n",
     "So, contextual bandits are a step closer to full RL, but the second difference remains, that the state is not influened by the action taken.\n",
     "\n",
@@ -42,28 +53,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reward vs. Regret\n",
+    "## Reward vs. Regret\n",
     "\n",
     "While it's common in reinforcement learning to maximize **rewards**, we can also model the opposite of reward, called **regret**. Essentially, regret is the difference between the reward achieved from the total reward possible if the algorithm could choose the best possible decision at every time step.\n",
     "\n",
-    "The point of using a bandit is to try to _maximize average reward_. If the algorithm had perfect visibility into the dynamics of the environment, it would always choose the optimal arm to maximize the cummulative reward! However, that's not an interesting real-world problem to solve. Instead, we focus on the case where the algorithm only has limited visibility, so it cannot predict rewards. This means that the **exploitation vs. exploration tradeoff** is an important aspect of MABs as for reinforcement learning, in general. Pulling one arm repeatedly may provide an excellent reward, but other arms my provide even better rewards, especially as the context evolves.\n",
+    "The point of using a bandit is to try to _maximize average reward_. If the algorithm had perfect visibility into the dynamics of the environment, it would always choose the optimal arm to maximize the cummulative reward! However, that's not an interesting real-world problem to solve. Instead, we focus on the case where the algorithm only has limited visibility, so it cannot predict rewards. This means that the **exploitation vs. exploration tradeoff** is an essential aspect of MABs that is shared with general reinforcement learning systems. Pulling one arm repeatedly may provide an excellent reward, but other arms my provide even better rewards, especially as the context evolves.\n",
     "\n",
-    "Even while the reward can't be predicted, some algorithms can place theoretical upper bounds on the regret. The use of machine learning to leverage the context and then minimize the regret in turn can provide good solutions."
+    "Even while the reward can't be predicted, some the exploration-explotatin strategy provided by some algorithms can place theoretical upper bounds on the regret. The use of machine learning to leverage the context and then minimize the regret in turn can provide good solutions. We'll explore this idea in the lessons."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Translating this into the investment fund example, market conditions define the context. Imagine having one arm of the contextual bandit for each of the stocks that could be selected as an investment. For example, when a particular arm gets “pulled” $10,000 gets invested into that stock for that week. Subsequent performance of the selected stocks defines the _reward_, while the difference from the reward and the subsequent performance of the best-performing stocks in the market defines the _regret_.\n",
+    "Translating these concepts to the investment fund example, market conditions define the context. Imagine having one arm of the contextual bandit for each of the stocks that could be selected as an investment. For example, when a particular arm gets “pulled” $10,000 gets invested into that stock for that week. Subsequent performance of the selected stocks defines the _reward_. The difference between this reward and the subsequent performance of the best-performing stock in the market defines the _regret_.\n",
     "\n",
-    "Of course, this example grossly oversimplified how investment fund management actually works, but it provides a good idea of how contextual bandits can be used for online learning problems. In fact, bandits are used in finance and they’re especially good for testing website designs – probably more flexible and less costly than A/B testing."
+    "Of course, this example grossly oversimplified how investment fund management actually works, but it provides a good idea of how contextual bandits can be used for online learning problems. Bandit models are used in finance. They are also especially good for testing website designs, for example, often with greater flexibility and less cost than conventional A/B testing."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
