Reorganizing the MAB lessons

--- a/ray-rllib/06-RL-References.ipynb
+++ b/ray-rllib/06-RL-References.ipynb
@@ -60,6 +60,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Papers\n",
+    "\n",
+    "### Upper Confidence Bound\n",
+    "\n",
+    "* Lihong Li, Wei Chu, John Langford, Robert E. Schapire, \"A contextual-bandit approach to personalized news article recommendation\", Proceedings of the 19th International Conference on World Wide Web (WWW 2010), [pdf](https://arxiv.org/abs/1003.0146).\n",
+    "* Wei Chu, Lihong Li, Lev Reyzin, Robert E. Schapire (), \"Contextual bandits with linear payoff functions\" (PDF), Proceedings of the 14th International Conference on Artificial Intelligence and Statistics (AISTATS 2011), [pdf](https://arxiv.org/abs/1003.0146).\n",
+    "* T.L. Lai, Herbert Robbins, “Asymptotically efficient adaptive allocation rules”, Advances in Applied Mathematics, Volume 6, Issue 1 (1985), pp 4-22, [link](https://doi.org/10.1016/0196-8858(85)90002-8).\n",
+    "* M N Katehakis and H Robbins, “Sequential choice from several populations”, Proc Natl Acad Sci U S A. 1995 Sep 12; 92(19): 8584–8585, [link](https://doi.org/10.1073/pnas.92.19.8584).\n",
+    "* Warrick Masson, Pravesh Ranchod, George Konidaris, \"Reinforcement Learning with Parameterized Actions\" [pdf](https://arxiv.org/abs/1509.01644).\n",
+    "\n",
+    "### Thompson Sampling\n",
+    "\n",
+    "* William R. Thompson, \"On the likelihood that one unknown probability exceeds another in view of the evidence of two samples\". Biometrika, 25(3–4):285–294, 1933, [pdf](https://www.dropbox.com/s/yhn9prnr5bz0156/1933-thompson.pdf).\n",
+    "* Daniel J. Russo, Benjamin Van Roy, Abbas Kazerouni, Ian Osband and Zheng Wen, \"A Tutorial on Thompson Sampling\", Foundations and Trends in Machine Learning: Vol. 11: No. 1, pp 1-96, 2018, [pdf](https://web.stanford.edu/~bvr/pubs/TS_Tutorial.pdf).\n",
+    "* Carlos Riquelme, George Tucker, Jasper Snoek, “Deep Bayesian Bandits Showdown: An Empirical Comparison of Bayesian Deep Networks for Thompson Sampling”, ICLR 2018, [pdf](https://arxiv.org/abs/1802.09127).\n",
+    "* Shipra Agrawal, Navin Goyal, \"Analysis of Thompson Sampling for the Multi-armed Bandit Problem\", JMLR: Workshop and Conference Proceedings vol 23 (2012) 39.1–39.26, [pdf](http://proceedings.mlr.press/v23/agrawal12/agrawal12.pdf).\n",
+    "* Shipra Agrawal, Navin Goyal, \"Thompson Sampling for Contextual Bandits with Linear Payoffs\", Proceedings of the 30th International Conference on Ma- chine Learning, Atlanta, Georgia, USA, 2013, [pdf](http://proceedings.mlr.press/v28/agrawal13.pdf)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## RISELab\n",
     "\n",
     "The RISE Lab and U.C. Berkeley has many useful tutorials, videos, etc.:\n",
