--- a/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
+++ b/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Introduction to Multi-Armed Bandits\n",
+    "# Ray RLlib Multi-Armed Bandits - Introduction to Bandits\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
