--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -1271,7 +1271,7 @@
    "source": [
     "## 02: Simple Multi-Armed Bandits - Exercise 3\n",
     "\n",
-    "Repeat exercise 2 and exercise 3 using Thompson Sampling ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). In this code we used above:\n",
+    "Repeat exercises 1 and 2 using Thompson Sampling ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). In this code we used above:\n",
     "\n",
     "```python\n",
     "analysis = tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
