--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -4,11 +4,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Simple Multi-Armed Bandits Example\n",
+    "# Ray RLlib Multi-Armed Bandits - A Simple Bandit Example\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Picking an Exploration-Exploitation Strategy\n",
+    "\n",
+    "What strategy should we follow for selecting actions that balance the exploration-exploitation tradeoff, yielding the maximum average reward over time?\n",
+    "\n",
+    "This is the essence of most RL/MAB algorithms. Let's briefly discuss four algorithms, then explore two of them with examples over several lessons.\n",
+    "\n",
+    "> **Tip:** Understanding the rest of this section is not required for the rest of this lesson and subsequent lessons. So, you can safely skip the rest of this section for now and jump to the **Using LinUCB** section below, if you wish. Consider returning here later when you need a better understanding of how the described algorithms work. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $\\epsilon$-Greedy\n",
+    "\n",
+    "One possible strategy is $\\epsilon$-Greedy, where $\\epsilon$ is small number that determines how frequently exploration is done. The best-known action is exploited most of the time, governed by probability $1 - \\epsilon$ (i.e., in percentage terms $100*(1 - \\epsilon)$%). With probability $\\epsilon$, a previously-unexplored action is randomly picked in the hopes of finding a new, best-rewarding action.\n",
+    "\n",
+    "Typical values of $\\epsilon$ are between 0.01 and 0.1. A larger value, like 0.1, explores more aggressively and finds the optimal policy more quickly, but afterwards the aggressive exploration strategy becomes a liability, as it only selects the optimal action ~90% of the time, continuing excessive exploration that is now counterproductive. In contrast, smaller values, like 0.01, are slower to find the optimal policy, but once found continue to select it ~99% of the time, so over time the mean reward is _higher_ for _smaller_ $\\epsilon$ values, as the optimal action is selected more often.\n",
+    "\n",
+    "See [Wikipedia - MAB Approximate Solutions](https://en.wikipedia.org/wiki/Multi-armed_bandit) and [Sutton 2018](https://mitpress.mit.edu/books/reinforcement-learning-second-edition) for more information. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upper Confidence Bound\n",
+    "\n",
+    "A limitation about $\\epsilon$-greedy is that exploration is done indiscriminately. Is it possible to make a more informed choice about which alternative actions are more likely to yield a good result, so we preferentially pick one of them? That's what the Upper Confidence Bound (UCB) algorithm attempts to do. It weights some choices over others. \n",
+    "\n",
+    "It's worth looking at the formula that governs the choice for the next action at time $t$:\n",
+    "\n",
+    "$$A_t \\doteq \\frac{argmax}{a}\\bigg[ Q_t(a) + c\\sqrt{ \\dfrac{\\ln(t)}{N_t(a)} }\\bigg]$$\n",
+    "\n",
+    "It's not essential to fully understand all the details, but here is the gist of it; the best action to take at time $t$, $A_t$, is decided by picking the best known action for returning the highest value (the $Q_t(a)$ term in the brackets [...] computes this), but with a correction term that encourages exploration, especially for smaller $t$, but less so for a particular $a$ if we've already picked it a lot (the second term).\n",
+    "\n",
+    "In more detail:\n",
+    "\n",
+    "* $A_t$ is the action we want to select at time $t$, the action that is most likely to produce the best reward or most likely to be worth exploring.\n",
+    "* For all the actions we can choose from, we pick the action $a$ that maximizes the formula in the brackets [...].\n",
+    "* $Q_t(a)$ is any equation we're using to measure the \"value\" received at time $t$ for action $a$. This is the greedy choice, i.e., the equation that tells us which action $a$ we currently know will give us the highest value. If we never wanted to explore, the second term in the brackets wouldn't exist. $Q_t(a)$ alone would always tell us to pick the best action we already know about. \n",
+    "* The second term in the brackets is the correction that UCB gives us. As time $t$ increases, the natural log of $t$ also increases, but slower and slower for larger $t$. This is good because we hope we will find the real best action at some earlier time $t$, so exploration at large $t$ is less useful. However, the denominator, $N_t(a)$ is the number of times we've selected $a$ already. The more times we've already tried, the less \"interesting\" it is to try again, so this term penalizes choosing $a$. Finally, $c$ is a constant, a \"knob\" or _hyperparameter_ that determines how much we weight exploration vs. exploitation.\n",
+    "\n",
+    "\n",
+    "When we use UCB shortly, we'll use a simple _linear_ equation for $Q_t(a)$, i.e., something of the form $z = ax + by + c$.\n",
+    "\n",
+    "See [Wikipedia - MAB Approximate solutions for contextual bandit](https://en.wikipedia.org/wiki/Multi-armed_bandit), [these references](../06-RL-References.ipynb#Upper-Confidence-Bound), and the [RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-upper-confidence-bound-contrib-linucb) for more information. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Thompson Sampling\n",
+    "\n",
+    "Thompson sampling, developed in the 30s, is similar to UCB in that it picks the action that is believed to have the highest potential of maximum reward. The probability of selecting any of the available actions is based on the expectation of reward from the posterior distributions of rewards with previously sampled actions and contexts rewards.\n",
+    "\n",
+    "For more information, see [Wikipedia](https://en.wikipedia.org/wiki/Thompson_sampling), [A Tutorial on Thompson Sampling](https://web.stanford.edu/~bvr/pubs/TS_Tutorial.pdf), [RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints), and other references in [06 RL References](../06-RL-References.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Bandit Algorithms\n",
+    "\n",
+    "Focusing explicitly on rewards isn't the only approach. What if we use a more general measure, a _preference_, for selecting an action $a$ at time $t$, represented here $H_t(a)$? We need to model this so we have a probability of selecting an action $a$. Using the _soft-max distribution_ works, also known as the Gibbs or Boltzmann distribution:\n",
+    "\n",
+    "$Pr\\{A_t = a\\} \\doteq \\frac{e^{H_t(a)}}{\\sum^{k}_{b=1}e^{H_t(b)}} \\doteq \\pi_t(a)$\n",
+    "\n",
+    "$\\pi_t(a)$ is defined to encapsulate this formula for the probability of taking action $a$ at time $t$.\n",
+    "\n",
+    "The term _gradient_ is used for this algorithm because the training update formula for $H_t(a)$ is very similar to the _stochastic gradient descent_ formula used in other ML problems. \n",
+    "\n",
+    "After an action $a$ is selected at a time $t$ and reward $R_t$ is received, the action preferences are updated as follows:\n",
+    "\n",
+    "$ H_{t+1}(A_t) \\doteq H_t(A_t) + \\alpha(R_t - \\overset{\\_}{R_t})(1 - \\pi_t(A_t))$,  and\n",
+    "\n",
+    "$ H_{t+1}(a) \\doteq H_t(a) - \\alpha(R_t - \\overset{\\_}{R_t})(\\pi_t(a))$,  for all $a \\ne A_t$\n",
+    "\n",
+    "where $\\alpha > 0$ is a step size parameter and $\\overset{\\_}{R_t}$ is the average of all the rewards up through and including time $t$. Note that if $R_t - \\overset{\\_}{R_t}$ is positive, meaning the current reward is larger than the average, the preference $H(A_t)$ increases. Otherwise, it descreases. Note the plus vs. minus signs in the two equations before the $\\alpha$ term. We would expect the _other_ $H(a)$ terms, for the rest of the $a$ actions, to decrease when $H(A_t)$ increases. That is, if our preference for $A_t$ increases, our preferences for the other actions should decrease.\n",
+    "\n",
+    "We won't discuss this algorithm further. See [Sutton 2018](https://mitpress.mit.edu/books/reinforcement-learning-second-edition) for more details."
    ]
   },
   {
@@ -152,14 +241,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at the `current_context`. If it's `1.0`, does the `0` (first) action yield the highest reward and lowest regret? If it's `-1.0`, does the `2` (third) action yield the highest reward and lowest regret?\n",
+    "Look at the `current_context`. If it's `1.0`, does the `0` (first) action yield the highest reward and lowest regret? If it's `-1.0`, does the `2` (third) action yield the highest reward and lowest regret?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using LinUCB\n",
     "\n",
+    "Returning to our example, let's train with [LinUCB](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-upper-confidence-bound-contrib-linucb), a linear version of Upper Confidence Bound, for the exploration-exploitation strategy. LinUCB assumes a linear dependency between the expected reward of an action and its context. Recall that a linear function is of the form $z = ax + by + c$, for example, where $x$, $y$, and $z$ are variables and $a$, $b$, and $c$ are constants. LinUCB models the representation space using a set of linear predictors. Hence, the $Q_t(a)$ function discussed for UCB above is a linear function here.\n",
+    "\n",
+    "Notice how we defined `rewards_for_context` values to be linear as expected for LinUCB:\n",
+    "\n",
+    "```python\n",
+    "self.rewards_for_context = {\n",
+    "    -1.: [-10, 0, 10],\n",
+    "    1.: [10, 0, -10],\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "For each arm, the reward is linear in the context. For example, the first arm has a reward of `-10` or context `-1.0` and `10` for context `1.0.` The same linear function would work for the other two arms if you multiplied the constants by `0` and `-1`, respectively.\n",
+    "\n",
+    "> **Note:** We'll explore usage of LinUCB in more depth in the lesson [03 Linear Upper Confidence Bound](03-Linear-Upper-Confidence-Bound.ipynb.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now use Tune to train the policy for this bandit."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,62 +297,6 @@
    "outputs": [],
    "source": [
     "from ray.tune.progress_reporter import JupyterNotebookReporter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Picking an Exploration-Explotation Strategy\n",
-    "\n",
-    "Now that we have an environment in which we want to train, what strategy should we follow for selecting actions that balance the exploration-explotation tradeoff and over time yield the maximum cummulative reward?\n",
-    "\n",
-    "This is the essence of most RL/MAB algorithms. Let's discuss four candidates, then explore two of them with examples over several lessons.\n",
-    "See [Sutton 2018](../06-RL-References.ipynb#Books) for more information."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### $\\epsilon$-Greedy\n",
-    "\n",
-    "One possible strategy is $\\epsilon$-Greedy. The best-known action is exploited most of the time, governed by $1 - \\epsilon$, or in percentage terms $100*(1 - \\epsilon)$%, for a small value of $\\epsilon$. The remaining times $\\epsilon$ ($100*\\epsilon$%), randomly pick a previously-unexplored action in the hopes of finding a new, best-rewarding action.\n",
-    "\n",
-    "Typical values of $\\epsilon$ are between 0.01 and 0.1. A larger value, like 0.1, explores more aggressively and finds the optimal policy more quickly, but afterwards the aggressive exploration strategy becomes a liability, as it only selects the optimal action ~90% of the time, continuing excessive exploration that is now counterproductive. In contrast, smaller values, like 0.01, are slower to find the optimal policy, but once found continue to select it ~99% of the time, so over time the mean reward is _higher_ for _smaller_ $\\epsilon$ values, as the optimal action is selected more often."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Upper Confidence Bound\n",
-    "\n",
-    "The Upper Confidence Bound algorithm \n",
-    "\n",
-    "It assumes a linear dependency between the expected reward of an action and its context. Recall that a linear function is of the form $z = ax + by + c$, for example, where $x$, $y$, and $z$ are variables and $a$, $b$, and $c$ are constants. LinUCB models the representation space using a set of linear predictors.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using LinUCB\n",
-    "\n",
-    "Returning to our example, let's train with the _LinUCB_, a linear version of Upper Confidence Bound, for the exploration-explotation strategy ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-upper-confidence-bound-contrib-linucb)). It assumes a linear dependency between the expected reward of an action and its context. Recall that a linear function is of the form $z = ax + by + c$, for example, where $x$, $y$, and $z$ are variables and $a$, $b$, and $c$ are constants. LinUCB models the representation space using a set of linear predictors.\n",
-    "\n",
-    "Notice how we defined `rewards_for_context` values to be linear as expected for LinUCB:\n",
-    "\n",
-    "```python\n",
-    "self.rewards_for_context = {\n",
-    "    -1.: [-10, 0, 10],\n",
-    "    1.: [10, 0, -10],\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "For each arm, the reward is linear in the context. For example, the first arm has a reward of `-10` or context `-1.0` and `10` for context `1.0.` The same linear function would work for the other two arms if you multiplied the constants by `0` and `-1`, respectively.\n",
-    "\n",
-    "> **Note:** We'll explore usage of LinUCB in more depth in the lesson [03 Linear Upper Confidence Bound](03-Linear-Upper-Confidence-Bound.ipynb.ipynb)."
    ]
   },
   {
@@ -654,17 +714,7 @@
    "source": [
     "## Exercise 3\n",
     "\n",
-    "Repeat exercise 2 and exercise 3 using linear Thompson Sampling ([Wikipedia](https://en.wikipedia.org/wiki/Thompson_sampling), [RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). \n",
-    "\n",
-    "Thompson sampling, developed in the 30s also addresses the exploration-exploitation dilemma for bandits. \n",
-    "\n",
-    "* William R. Thompson, \"On the likelihood that one unknown probability exceeds another in view of the evidence of two samples\". Biometrika, 25(3–4):285–294, 1933, [pdf](https://www.dropbox.com/s/yhn9prnr5bz0156/1933-thompson.pdf).\n",
-    "* Carlos Riquelme, George Tucker, Jasper Snoek, “Deep Bayesian Bandits Showdown: An Empirical Comparison of Bayesian Deep Networks for Thompson Sampling”, ICLR 2018, [pdf](https://arxiv.org/abs/1802.09127).\n",
-    "* Daniel J. Russo, Benjamin Van Roy, Abbas Kazerouni, Ian Osband and Zheng Wen, \"A Tutorial on Thompson Sampling\", Foundations and Trends in Machine Learning: Vol. 11: No. 1, pp 1-96, 2018, [pdf](https://web.stanford.edu/~bvr/pubs/TS_Tutorial.pdf).\n",
-    "* Shipra Agrawal, Navin Goyal, \"Analysis of Thompson Sampling for the Multi-armed Bandit Problem\", JMLR: Workshop and Conference Proceedings vol 23 (2012) 39.1–39.26, [pdf](http://proceedings.mlr.press/v23/agrawal12/agrawal12.pdf).\n",
-    "* Shipra Agrawal, Navin Goyal, \"Thompson Sampling for Contextual Bandits with Linear Payoffs\", Proceedings of the 30th International Conference on Ma- chine Learning, Atlanta, Georgia, USA, 2013, [pdf](http://proceedings.mlr.press/v28/agrawal13.pdf).\n",
-    "\n",
-    "In the following code we used above:\n",
+    "Repeat exercises 1 and 2 using Thompson Sampling ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). In this code we used above:\n",
     "\n",
     "```python\n",
     "analysis = tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
@@ -672,7 +722,7 @@
     "                    verbose=2)  # Change to 0 or 1 to reduce the output.\n",
     "```\n",
     "\n",
-    "Change `contrib/LinUCB` to `contrib/LinTS`. Are the results any different compared to LinUCB?"
+    "Change `contrib/LinUCB` to `contrib/LinTS`.  "
    ]
   },
   {
