Fixed titles, removed redundant cells in 03

--- a/ray-rllib/multi-armed-bandits/05-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Thompson-Sampling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Linear Thompson Sampling\n",
+    "# Ray RLlib Multi-Armed Bandits - Linear Thompson Sampling\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
