--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Linear Upper Confidence Bound\n",
+    "# Ray RLlib Multi-Armed Bandits - Linear Upper Confidence Bound\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
