--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -36,14 +36,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define the bandit as a subclass of an OpenAI Gym environment. We set the action space to have three discrete variables, one action for each arm, and an observation space (the context) in the range -1.0 to 1.0, inclusive.\n",
+    "We define the bandit as a subclass of an OpenAI Gym environment. We set the action space to have three discrete variables, one action for each arm, and an observation space (the context) in the range -1.0 to 1.0, inclusive. \n",
     "\n",
     "There are two contexts defined. Note that we'll randomly pick one of them to use when `reset` is called, but it stays fixed (static) throughout the episode (the set of steps between calls to `reset`)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,21 +85,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try repeating the next two code cells enough times to see the `current_context` set to `1.0` and `-1.0`."
+    "Try repeating the next two code cells enough times to see the `current_context` set to `1.0` and `-1.0`, which is done randomly by `reset`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Initial observation = [-1.  1.], bandit = SimpleContextualBandit(action_space=Discrete(3), observation_space=Box(2,), current_context=1.0, rewards per context={-1.0: [-10, 0, 10], 1.0: [10, 0, -10]})'"
+       "'Initial observation = [ 1. -1.], bandit = SimpleContextualBandit(action_space=Discrete(3), observation_space=Box(2,), current_context=-1.0, rewards per context={-1.0: [-10, 0, 10], 1.0: [10, 0, -10]})'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,24 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_context = 1.0\n",
-      "observation = [-1.  1.], action = 2, reward =  -10, done = True , info = {'regret': 20}\n",
-      "observation = [-1.  1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
-      "observation = [-1.  1.], action = 0, reward =   10, done = True , info = {'regret': 0}\n",
-      "observation = [-1.  1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
-      "observation = [-1.  1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
-      "observation = [-1.  1.], action = 2, reward =  -10, done = True , info = {'regret': 20}\n",
-      "observation = [-1.  1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
-      "observation = [-1.  1.], action = 2, reward =  -10, done = True , info = {'regret': 20}\n",
-      "observation = [-1.  1.], action = 2, reward =  -10, done = True , info = {'regret': 20}\n",
-      "observation = [-1.  1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n"
+      "current_context = -1.0\n",
+      "observation = [ 1. -1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
+      "observation = [ 1. -1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
+      "observation = [ 1. -1.], action = 2, reward =   10, done = True , info = {'regret': 0}\n",
+      "observation = [ 1. -1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
+      "observation = [ 1. -1.], action = 2, reward =   10, done = True , info = {'regret': 0}\n",
+      "observation = [ 1. -1.], action = 1, reward =    0, done = True , info = {'regret': 10}\n",
+      "observation = [ 1. -1.], action = 0, reward =  -10, done = True , info = {'regret': 20}\n",
+      "observation = [ 1. -1.], action = 2, reward =   10, done = True , info = {'regret': 0}\n",
+      "observation = [ 1. -1.], action = 2, reward =   10, done = True , info = {'regret': 0}\n",
+      "observation = [ 1. -1.], action = 0, reward =  -10, done = True , info = {'regret': 20}\n"
      ]
     }
    ],
@@ -161,9 +161,9 @@
    "source": [
     "## Using LinUCB\n",
     "\n",
-    "Returning to our example, let's train with [LinUCB](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-upper-confidence-bound-contrib-linucb), a linear version of Upper Confidence Bound, for the exploration-exploitation strategy. LinUCB assumes a linear dependency between the expected reward of an action and its context. Recall that a linear function is of the form $z = ax + by + c$, for example, where $x$, $y$, and $z$ are variables and $a$, $b$, and $c$ are constants. LinUCB models the representation space using a set of linear predictors. Hence, the $Q_t(a)$ function discussed for UCB above is a linear function here.\n",
+    "For this simple example, we can easily determine the best actions to take. Let's see how well our system does. We'll train with [LinUCB](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-upper-confidence-bound-contrib-linucb), a linear version of _Upper Confidence Bound_, for the exploration-exploitation strategy. _LinUCB_ assumes a linear dependency between the expected reward of an action and its context. Recall that a linear function is of the form $z = ax + by + c$, for example, where $x$, $y$, and $z$ are variables and $a$, $b$, and $c$ are constants. _LinUCB_ models the representation space using a set of linear predictors. Hence, the $Q_t(a)$ function discussed for UCB in the [previous lesson](02-Exploration-vs-Exploitation-Strategies.ipynb) is a linear function here.\n",
     "\n",
-    "Notice how we defined `rewards_for_context` values to be linear as expected for LinUCB:\n",
+    "Look again at how we defined `rewards_for_context`. Is it linear as expected for _LinUCB_?\n",
     "\n",
     "```python\n",
     "self.rewards_for_context = {\n",
@@ -172,9 +172,7 @@
     "}\n",
     "```\n",
     "\n",
-    "For each arm, the reward is linear in the context. For example, the first arm has a reward of `-10` or context `-1.0` and `10` for context `1.0.` The same linear function would work for the other two arms if you multiplied the constants by `0` and `-1`, respectively.\n",
-    "\n",
-    "> **Note:** We'll explore usage of LinUCB in more depth in the lesson [03 Linear Upper Confidence Bound](03-Linear-Upper-Confidence-Bound.ipynb.ipynb)."
+    "Yes, for each arm, the reward is linear in the context. For example, the first arm has a reward of `-10` for context `-1.0` and `10` for context `1.0`. Crucially, the _same_ linear function that works for the first arm will work for the other two arms if you multiplied the constants in the linear function by `0` and `-1`, respectively. Hence, we expect _LinUCB_ to work well for this example."
    ]
   },
   {
@@ -625,7 +623,7 @@
    "source": [
     "## Exercise 3\n",
     "\n",
-    "Repeat exercises 1 and 2 using Thompson Sampling ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). In this code we used above:\n",
+    "We briefly discussed another algorithm for selecting the next action, _Thompson Sampling_, in the [previous lesson](02-Exploration-vs-Exploitation-Strategies.ipynb). Repeat exercises 1 and 2 using linear version, called _Linear Thompson Sampling_ ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). To make this change, look at this code we used above:\n",
     "\n",
     "```python\n",
     "analysis = tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
@@ -634,6 +632,13 @@
     "```\n",
     "\n",
     "Change `contrib/LinUCB` to `contrib/LinTS`.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll continue exploring usage of _LinUCB_ in the next lesson, [04 Linear Upper Confidence Bound](04-Linear-Upper-Confidence-Bound.ipynb.ipynb) and _LinTS_ in the following lesson, [05 Thompson Sampling](05-Thompson-Sampling.ipynb)."
    ]
   },
   {
