--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02: Simple Multi-Armed Bandits - Exercise 1"
+    "## 03: Simple Multi-Armed Bandits - Exercise 1"
    ]
   },
   {
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02: Simple Multi-Armed Bandits - Exercise 2\n",
+    "## 03: Simple Multi-Armed Bandits - Exercise 2\n",
     "\n",
     "Recall the `rewards_for_context` we used:\n",
     "\n",
@@ -1269,9 +1269,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02: Simple Multi-Armed Bandits - Exercise 3\n",
+    "## 03: Simple Multi-Armed Bandits - Exercise 3\n",
     "\n",
-    "Repeat exercises 1 and 2 using Thompson Sampling ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). In this code we used above:\n",
+    "We briefly discussed another algorithm for selecting the next action, _Thompson Sampling_, in the [previous lesson](../02-Exploration-vs-Exploitation-Strategies.ipynb). Repeat exercises 1 and 2 using linear version, called _Linear Thompson Sampling_ ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). To make this change, look at this code we used above:\n",
     "\n",
     "```python\n",
     "analysis = tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
