Saving work on MABs

--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -585,7 +585,9 @@
     "            })\n",
     "```\n",
     "\n",
-    "Repeat the training and analysis. Does the training behavior change in any appreciable way? Why or why not?"
+    "Repeat the training and analysis. Does the training behavior change in any appreciable way? Why or why not?\n",
+    "\n",
+    "See the [solutions notebook](solutions/Multi-Armed-Bandits-Solutions.ipynb) for discussion of this and the following exercises."
    ]
   },
   {
@@ -621,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3\n",
+    "## Exercise 3 (Optional)\n",
     "\n",
     "We briefly discussed another algorithm for selecting the next action, _Thompson Sampling_, in the [previous lesson](02-Exploration-vs-Exploitation-Strategies.ipynb). Repeat exercises 1 and 2 using linear version, called _Linear Thompson Sampling_ ([RLlib documentation](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints)). To make this change, look at this code we used above:\n",
     "\n",
