--- a/ray-rllib/multi-armed-bandits/05-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Thompson-Sampling.ipynb
@@ -15,30 +15,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This lesson explore o using **Linear Thompson Sampling** on the `WheelBandit` environment.\n",
-    "Finally, let’s explore another contextual bandit based on the Linear Thompson Sampling (LinTS) exploration strategy. For detailed discussion about the algorithm see:\n",
+    "This lesson uses a second exploration strategy we discussed briefly in lesson [02 Exploration vs. Exploitation Strategies](02-Exploration-vs-Exploitation-Strategies.ipynb), _Thompson Sampling_, with a linear variant, [LinTS](https://docs.ray.io/en/latest/rllib-algorithms.html?highlight=greedy#linear-thompson-sampling-contrib-lints).\n",
     "\n",
-    "For more information about `WheelBandit` see https://arxiv.org/abs/1802.09127"
+    "We'll use it on the `WheelBandit` environment, which is discussed in [this paper](https://arxiv.org/abs/1802.09127)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the import next of `LinTSTrainer` and how it is used below. For the `LinUCB` example in the [previous lesson](04-Linear-Upper-Confidence-bound.ipynb), we didn't import the corresponding `LinUCBTrainer`, but passed a \"magic\" string to Tune, `contrib/LinUCB`. This approach is an alternative."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key \"text.kerning_factor\" on line 4 in\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "http://github.com/matplotlib/matplotlib/blob/master/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -47,9 +40,7 @@
     "from ray import tune\n",
     "from ray.rllib.contrib.bandits.agents import LinTSTrainer\n",
     "from ray.rllib.contrib.bandits.agents.lin_ts import TS_CONFIG\n",
-    "from ray.rllib.contrib.bandits.envs import WheelBanditEnv\n",
-    "\n",
-    "%matplotlib inline"
+    "from ray.rllib.contrib.bandits.envs import WheelBanditEnv"
    ]
   },
   {
@@ -618,6 +609,15 @@
     "\n",
     "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
+    "\n",
+    "See the [solutions notebook](solutions/Multi-Armed-Bandits-Solutions.ipynb) for discussion of this and the following exercises."
    ]
   },
   {
