Completed the 05: Thompson Sampling lesson

--- a/ray-rllib/06-RL-References.ipynb
+++ b/ray-rllib/06-RL-References.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "* William R. Thompson, \"On the likelihood that one unknown probability exceeds another in view of the evidence of two samples\". Biometrika, 25(3–4):285–294, 1933, [pdf](https://www.dropbox.com/s/yhn9prnr5bz0156/1933-thompson.pdf).\n",
     "* Daniel J. Russo, Benjamin Van Roy, Abbas Kazerouni, Ian Osband and Zheng Wen, \"A Tutorial on Thompson Sampling\", Foundations and Trends in Machine Learning: Vol. 11: No. 1, pp 1-96, 2018, [pdf](https://web.stanford.edu/~bvr/pubs/TS_Tutorial.pdf).\n",
-    "* Carlos Riquelme, George Tucker, Jasper Snoek, “Deep Bayesian Bandits Showdown: An Empirical Comparison of Bayesian Deep Networks for Thompson Sampling”, ICLR 2018, [pdf](https://arxiv.org/abs/1802.09127).\n",
+    "* Carlos Riquelme, George Tucker, Jasper Snoek, “Deep Bayesian Bandits Showdown: An Empirical Comparison of Bayesian Deep Networks for Thompson Sampling”, ICLR 2018, [pdf](https://arxiv.org/abs/1802.09127). This paper introduces the _WheelBandit_ used in our Thompson Sampling lesson and also discusses exploration algorithms not discussed in this tutorial.\n",
     "* Shipra Agrawal, Navin Goyal, \"Analysis of Thompson Sampling for the Multi-armed Bandit Problem\", JMLR: Workshop and Conference Proceedings vol 23 (2012) 39.1–39.26, [pdf](http://proceedings.mlr.press/v23/agrawal12/agrawal12.pdf).\n",
     "* Shipra Agrawal, Navin Goyal, \"Thompson Sampling for Contextual Bandits with Linear Payoffs\", Proceedings of the 30th International Conference on Ma- chine Learning, Atlanta, Georgia, USA, 2013, [pdf](http://proceedings.mlr.press/v28/agrawal13.pdf)."
    ]
