Completed first draft of the MAB lessons

--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -218,7 +218,9 @@
    "source": [
     "The up shot is that training to find the optimal, mean reward will be more challenging than our previous simple bandit.\n",
     "\n",
-    "Now that we've explored `ParametricItemRecoEnv`, let's use it with _LinUCB_."
+    "Now that we've explored `ParametricItemRecoEnv`, let's use it with _LinUCB_.\n",
+    "\n",
+    "Note that we imported `UCB_CONFIG` above, which has the properties defined that are expected _LinUCB_. We'll add another property to it for the environment. (Subsequent lessons will show other ways to work with the configuration.)"
    ]
   },
   {
@@ -1032,7 +1034,8 @@
     "    config=UCB_CONFIG,\n",
     "    stop={\"training_iteration\": training_iterations},\n",
     "    num_samples=5,\n",
-    "    checkpoint_at_end=False\n",
+    "    checkpoint_at_end=False,\n",
+    "    verbose=2)  # Change to 0 or 1 to reduce the output.\n",
     ")\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
