--- a/ray-rllib/multi-armed-bandits/05-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Thompson-Sampling.ipynb
@@ -431,7 +431,7 @@
     }
    ],
    "source": [
-    "from bokeh_util import plot_cumulative_regret, plot_model_weights\n",
+    "from bokeh_util import plot_cumulative_regret, plot_wheel_bandit_model_weights\n",
     "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
     "import bokeh\n",
     "bokeh.io.reset_output()\n",
@@ -487,20 +487,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What's in the standard config object for _LinTS_ anyway??"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'num_workers': 0, 'num_envs_per_worker': 1, 'rollout_fragment_length': 1, 'sample_batch_size': -1, 'batch_mode': 'truncate_episodes', 'num_gpus': 0, 'train_batch_size': 1, 'model': {'conv_filters': None, 'conv_activation': 'relu', 'fcnet_activation': 'tanh', 'fcnet_hiddens': [256, 256], 'free_log_std': False, 'no_final_linear': False, 'vf_share_layers': True, 'use_lstm': False, 'max_seq_len': 20, 'lstm_cell_size': 256, 'lstm_use_prev_action_reward': False, 'state_shape': None, 'framestack': True, 'dim': 84, 'grayscale': False, 'zero_mean': True, 'custom_model': None, 'custom_action_dist': None, 'custom_options': {}, 'custom_preprocessor': None}, 'optimizer': {}, 'gamma': 0.99, 'horizon': None, 'soft_horizon': False, 'no_done_at_end': False, 'env_config': {}, 'env': <class 'ray.rllib.contrib.bandits.envs.discrete.WheelBanditEnv'>, 'normalize_actions': False, 'clip_rewards': None, 'clip_actions': True, 'preprocessor_pref': 'deepmind', 'lr': 0.0001, 'monitor': False, 'log_level': 'WARN', 'callbacks': <class 'ray.rllib.agents.callbacks.DefaultCallbacks'>, 'ignore_worker_failures': False, 'log_sys_usage': True, 'use_pytorch': True, 'eager': False, 'eager_tracing': False, 'no_eager_on_workers': False, 'explore': True, 'exploration_config': {'type': 'ray.rllib.contrib.bandits.exploration.ThompsonSampling'}, 'evaluation_interval': None, 'evaluation_num_episodes': 10, 'in_evaluation': False, 'evaluation_config': {}, 'evaluation_num_workers': 0, 'custom_eval_function': None, 'use_exec_api': False, 'sample_async': False, 'observation_filter': 'NoFilter', 'synchronize_filters': True, 'tf_session_args': {'intra_op_parallelism_threads': 2, 'inter_op_parallelism_threads': 2, 'gpu_options': {'allow_growth': True}, 'log_device_placement': False, 'device_count': {'CPU': 1}, 'allow_soft_placement': True}, 'local_tf_session_args': {'intra_op_parallelism_threads': 8, 'inter_op_parallelism_threads': 8}, 'compress_observations': False, 'collect_metrics_timeout': 180, 'metrics_smoothing_episodes': 100, 'remote_worker_envs': False, 'remote_env_batch_wait_ms': 0, 'min_iter_time_s': 0, 'timesteps_per_iteration': 100, 'seed': None, 'extra_python_environs_for_driver': {}, 'extra_python_environs_for_worker': {}, 'num_cpus_per_worker': 1, 'num_gpus_per_worker': 0, 'custom_resources_per_worker': {}, 'num_cpus_for_driver': 1, 'memory': 0, 'object_store_memory': 0, 'memory_per_worker': 0, 'object_store_memory_per_worker': 0, 'input': 'sampler', 'input_evaluation': ['is', 'wis'], 'postprocess_inputs': False, 'shuffle_buffer_size': 0, 'output': None, 'output_compress_columns': ['obs', 'new_obs'], 'output_max_file_size': 67108864, 'multiagent': {'policies': {}, 'policy_mapping_fn': None, 'policies_to_train': None}}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'num_workers': 0,\n",
+       " 'num_envs_per_worker': 1,\n",
+       " 'rollout_fragment_length': 1,\n",
+       " 'sample_batch_size': -1,\n",
+       " 'batch_mode': 'truncate_episodes',\n",
+       " 'num_gpus': 0,\n",
+       " 'train_batch_size': 1,\n",
+       " 'model': {'conv_filters': None,\n",
+       "  'conv_activation': 'relu',\n",
+       "  'fcnet_activation': 'tanh',\n",
+       "  'fcnet_hiddens': [256, 256],\n",
+       "  'free_log_std': False,\n",
+       "  'no_final_linear': False,\n",
+       "  'vf_share_layers': True,\n",
+       "  'use_lstm': False,\n",
+       "  'max_seq_len': 20,\n",
+       "  'lstm_cell_size': 256,\n",
+       "  'lstm_use_prev_action_reward': False,\n",
+       "  'state_shape': None,\n",
+       "  'framestack': True,\n",
+       "  'dim': 84,\n",
+       "  'grayscale': False,\n",
+       "  'zero_mean': True,\n",
+       "  'custom_model': None,\n",
+       "  'custom_action_dist': None,\n",
+       "  'custom_options': {},\n",
+       "  'custom_preprocessor': None},\n",
+       " 'optimizer': {},\n",
+       " 'gamma': 0.99,\n",
+       " 'horizon': None,\n",
+       " 'soft_horizon': False,\n",
+       " 'no_done_at_end': False,\n",
+       " 'env_config': {},\n",
+       " 'env': ray.rllib.contrib.bandits.envs.discrete.WheelBanditEnv,\n",
+       " 'normalize_actions': False,\n",
+       " 'clip_rewards': None,\n",
+       " 'clip_actions': True,\n",
+       " 'preprocessor_pref': 'deepmind',\n",
+       " 'lr': 0.0001,\n",
+       " 'monitor': False,\n",
+       " 'log_level': 'WARN',\n",
+       " 'callbacks': ray.rllib.agents.callbacks.DefaultCallbacks,\n",
+       " 'ignore_worker_failures': False,\n",
+       " 'log_sys_usage': True,\n",
+       " 'use_pytorch': True,\n",
+       " 'eager': False,\n",
+       " 'eager_tracing': False,\n",
+       " 'no_eager_on_workers': False,\n",
+       " 'explore': True,\n",
+       " 'exploration_config': {'type': 'ray.rllib.contrib.bandits.exploration.ThompsonSampling'},\n",
+       " 'evaluation_interval': None,\n",
+       " 'evaluation_num_episodes': 10,\n",
+       " 'in_evaluation': False,\n",
+       " 'evaluation_config': {},\n",
+       " 'evaluation_num_workers': 0,\n",
+       " 'custom_eval_function': None,\n",
+       " 'use_exec_api': False,\n",
+       " 'sample_async': False,\n",
+       " 'observation_filter': 'NoFilter',\n",
+       " 'synchronize_filters': True,\n",
+       " 'tf_session_args': {'intra_op_parallelism_threads': 2,\n",
+       "  'inter_op_parallelism_threads': 2,\n",
+       "  'gpu_options': {'allow_growth': True},\n",
+       "  'log_device_placement': False,\n",
+       "  'device_count': {'CPU': 1},\n",
+       "  'allow_soft_placement': True},\n",
+       " 'local_tf_session_args': {'intra_op_parallelism_threads': 8,\n",
+       "  'inter_op_parallelism_threads': 8},\n",
+       " 'compress_observations': False,\n",
+       " 'collect_metrics_timeout': 180,\n",
+       " 'metrics_smoothing_episodes': 100,\n",
+       " 'remote_worker_envs': False,\n",
+       " 'remote_env_batch_wait_ms': 0,\n",
+       " 'min_iter_time_s': 0,\n",
+       " 'timesteps_per_iteration': 100,\n",
+       " 'seed': None,\n",
+       " 'extra_python_environs_for_driver': {},\n",
+       " 'extra_python_environs_for_worker': {},\n",
+       " 'num_cpus_per_worker': 1,\n",
+       " 'num_gpus_per_worker': 0,\n",
+       " 'custom_resources_per_worker': {},\n",
+       " 'num_cpus_for_driver': 1,\n",
+       " 'memory': 0,\n",
+       " 'object_store_memory': 0,\n",
+       " 'memory_per_worker': 0,\n",
+       " 'object_store_memory_per_worker': 0,\n",
+       " 'input': 'sampler',\n",
+       " 'input_evaluation': ['is', 'wis'],\n",
+       " 'postprocess_inputs': False,\n",
+       " 'shuffle_buffer_size': 0,\n",
+       " 'output': None,\n",
+       " 'output_compress_columns': ['obs', 'new_obs'],\n",
+       " 'output_max_file_size': 67108864,\n",
+       " 'multiagent': {'policies': {},\n",
+       "  'policy_mapping_fn': None,\n",
+       "  'policies_to_train': None}}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(TS_CONFIG)"
+    "TS_CONFIG"
    ]
   },
   {
@@ -867,8 +972,9 @@
     "    config=TS_CONFIG,\n",
     "    stop={\"training_iteration\": training_iterations},\n",
     "    num_samples=2,\n",
-    "    checkpoint_at_end=True\n",
-    "    )\n",
+    "    checkpoint_at_end=True,\n",
+    "    verbose=2            # Change to 0 or 1 to reduce the output.\n",
+    ")\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
    ]
@@ -1402,7 +1508,7 @@
     }
    ],
    "source": [
-    "plot_model_weights(means, covs)"
+    "plot_wheel_bandit_model_weights(means, covs)"
    ]
   },
   {
