Updated the Overviews for the MAB material

--- a/ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb
+++ b/ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb
@@ -10,12 +10,10 @@
     "\n",
     "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "This part of the [RLlib tutorial](../00-Ray-RLlib-Overview.ipynb) tutorial introduces _multi-armed bandits_ a popular approach that is very similar to \"classic\" reinforcement learning (RL), but with some differences, which we'll cover in the [first lesson](01-Introduction-to-Multi-Armed-Bandits.ipynb). [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) provides several bandit algorithms:\n",
+    "This part of the [RLlib tutorial](../00-Ray-RLlib-Overview.ipynb) tutorial introduces _Multi-Armed Bandits_ (MABs) a popular approach that is very similar to \"classic\" reinforcement learning (RL), but with some differences, which we'll cover in the [first lesson](01-Introduction-to-Multi-Armed-Bandits.ipynb). [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) provides several bandit algorithms:\n",
     "\n",
     "* [Linear Upper Confidence Bound (contrib/LinUCB)](https://docs.ray.io/en/latest/rllib-algorithms.html#linear-upper-confidence-bound-contrib-linucb)\n",
-    "* [Linear Thompson Sampling (contrib/LinTS)](https://docs.ray.io/en/latest/rllib-algorithms.html#linear-thompson-sampling-contrib-lints)\n",
-    "\n",
-    "The lessons in this tutorial use different environments from [OpenAI Gym](https://gym.openai.com/) to illustrate how to train policies."
+    "* [Linear Thompson Sampling (contrib/LinTS)](https://docs.ray.io/en/latest/rllib-algorithms.html#linear-thompson-sampling-contrib-lints)"
    ]
   },
   {
@@ -27,8 +25,12 @@
     "|     | Lesson | Description |\n",
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Multi-Armed-Bandits Overview](00-Multi-Armed-Bandits-Overview.iypnb) | Overview of this set of lessons. |\n",
-    "| 01  | [Introduction to Multi-Armed Bandits](01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL algorithms. |\n",
-    "| 02  | [Simple Multi-Armed Bandit](02-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
+    "| 01  | [Introduction to Multi-Armed Bandits](01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
+    "| 02  | [Exploration vs. Exploitation Strategies](02-Exploration-vs-Exploitation-Strategies.iypnb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
+    "| 03  | [Simple Multi-Armed Bandit](03-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
+    "| 04  | [Linear Upper Confidence Bound](04-Linear-Upper-Confidence-Bound.ipynb) | One popular algorithm for exploration vs. exploitation is _Upper Confidence Bound_. This lesson shows how to use a linear version in RLlib. |\n",
+    "| 05  | [Linear Thompson Sampling](05-Linear-Thompson-Sampling.ipynb) | Another popular algorithm for exploration vs. exploitation is _Thompson Sampling_. This lesson shows how to use a linear version in RLlib. |\n",
+    "| 06  | [Market Example](06-Market-Example.ipynb) | A simplified real-world example of MABs, finding the optimal stock and bond investment strategy. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Multi-Armed-Bandits-Solutions.ipynb)."
    ]
