--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -66,11 +66,11 @@
     "\n",
     "### This Directory\n",
     "\n",
-    "First, the root directory contains files for setting up your environment (`README.md` - this file, `environment.yml`, and `requirements.txt`), as discussed previoiusly, and the Apache license file (`LICENSE`). The `util` and the `images` directories contain library code and images used in the notebooks, respectively. (Each tutorial directory discussed below may also have supporting code files.) There is also a `reference` directory with notebooks and other materials you might find useful.\n",
+    "First, the root directory contains files for setting up your environment (`README.md` - this file, `environment.yml`, and `requirements.txt`), as discussed previoiusly, and the Apache license file (`LICENSE`). The `util` and the `images` directories contain library code and images used in the notebooks, respectively. (Each tutorial directory discussed below may also have supporting code files.) There is also a `reference` directory with notebooks and other materials you might find useful and several tutorials have their own reference sections.\n",
     "\n",
     "Each tutorial is contained in a dedicated directory. Each [Jupyter](https://jupyterlab.readthedocs.io/en/stable/) notebook is a _lesson_. The notebooks follow the naming convention `NN-name.ipynb`, where `NN` is a number that indicates the ordering of the lessons.\n",
     "\n",
-    "> **Note:** If two or more notebooks have the same `NN` number, it indicates they can be studied in arbitrary order.\n",
+    "> **Note:** If two or more notebooks have an `NNx` number, where `NN` is the same but `x` varies, it indicates they can be studied in arbitrary order.\n",
     "\n",
     "The tutorials are organized in subdirectories."
    ]
@@ -161,7 +161,11 @@
     "\n",
     "_Ray RLlib_ is Ray's system for _reinforcement learning_. This tutorial begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
     "\n",
-    "Note that the `04a-04c` lessons can be studied in any order.\n",
+    "Because of the breadth of RL this tutorial is divided into several segments. [00 Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) provides a suggested _learning plan_.\n",
+    "\n",
+    "#### Core Reinforcement Learning\n",
+    "\n",
+    "The lessons in this segment covers the core ideas of reinforcement learning (RL). Note that the `04a-04c` lessons can be studied in any order.\n",
     "\n",
     "| #   | Lesson (Notebook)                                         | Description                               |\n",
     "| :-  | :-------------------------------------------------------- | :---------------------------------------- |\n",
@@ -172,11 +176,27 @@
     "| 04a | [Application: Mountain Car](ray-rllib/04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
     "| 04b | [Application: Taxi](ray-rllib/04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
     "| 04c | [Application: Frozen Lake](ray-rllib/04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
-    "| 06  | [RL References](06-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "| 06  | [RL References](ray-rllib/06-RL-References.ipynb) | References on reinforcement learning. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
     "\n",
-    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
+    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project.\n",
+    "\n",
+    "#### Multi-Armed Bandits\n",
+    "\n",
+    "_Multi-Armed Bandits_ (MABs) are a special kind of RL problem that have broad and growing applications. The term is inspired by the slot machines in casinos, so called _one-armed bandits_, but where a machine might have more than one arm. \n",
+    "\n",
+    "|     | Lesson | Description |\n",
+    "| :-- | :----- | :---------- |\n",
+    "| 00  | [Multi-Armed-Bandits Overview](ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb) | Overview of this set of lessons. |\n",
+    "| 01  | [Introduction to Multi-Armed Bandits](ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
+    "| 02  | [Exploration vs. Exploitation Strategies](ray-rllib/multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.iypnb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
+    "| 03  | [Simple Multi-Armed Bandit](ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
+    "| 04  | [Linear Upper Confidence Bound](ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb) | One popular algorithm for exploration vs. exploitation is _Upper Confidence Bound_. This lesson shows how to use a linear version in RLlib. |\n",
+    "| 05  | [Linear Thompson Sampling](ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb) | Another popular algorithm for exploration vs. exploitation is _Thompson Sampling_. This lesson shows how to use a linear version in RLlib. |\n",
+    "| 06  | [Market Example](ray-rllib/multi-armed-bandits/06-Market-Example.ipynb) | A simplified real-world example of MABs, finding the optimal stock and bond investment strategy. |\n",
+    "\n",
+    "In addition, exercise solutions for this segment of the tutorial can be found [here](ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
    ]
   },
   {
