--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces _reinforcement learning_ (RL) and [RLlib](https://ray.readthedocs.io/en/latest/rllib.html), Ray's comprehensive RL library.\n",
+    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces the broad topic of _reinforcement learning_ (RL) and [RLlib](https://ray.readthedocs.io/en/latest/rllib.html), Ray's comprehensive RL library.\n",
     "\n",
-    "The lessons in this tutorial use different environments from [OpenAI Gym](https://gym.openai.com/) to illustrate how to train policies.\n",
+    "The lessons in this tutorial use different _environments_ from [OpenAI Gym](https://gym.openai.com/) to illustrate how to train _policies_.\n",
     "\n",
     "See the instructions in the [README](../README.md) for setting up your environment to use this tutorial.\n",
     "\n",
@@ -23,7 +23,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are the lessons. Note that the `04a-04c` lessons can be studied in any order.\n",
+    "## Tutorial Sections\n",
+    "\n",
+    "Because of the breadth of RL this tutorial is divided into several segments. See below for a recommended _learning plan_.\n",
+    "\n",
+    "### Core Reinforcement Learning\n",
+    "\n",
+    "The lessons in this segment covers the core ideas of reinforcement learning (RL). Note that the `04a-04c` lessons can be studied in any order.\n",
     "\n",
     "|     | Lesson | Description |\n",
     "| :-- | :----- | :---------- |\n",
@@ -38,7 +44,67 @@
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-RLlib-Solutions.ipynb).\n",
     "\n",
-    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
+    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project.\n",
+    "\n",
+    "### Multi-Armed Bandits\n",
+    "\n",
+    "_Multi-Armed Bandits_ (MABs) are a special kind of RL problem that have broad and growing applications. The term is inspired by the slot machines in casinos, so called _one-armed bandits_, but where a machine might have more than one arm. \n",
+    "\n",
+    "|     | Lesson | Description |\n",
+    "| :-- | :----- | :---------- |\n",
+    "| 00  | [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb) | Overview of this set of lessons. |\n",
+    "| 01  | [Introduction to Multi-Armed Bandits](multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
+    "| 02  | [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.iypnb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
+    "| 03  | [Simple Multi-Armed Bandit](multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
+    "| 04  | [Linear Upper Confidence Bound](multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb) | One popular algorithm for exploration vs. exploitation is _Upper Confidence Bound_. This lesson shows how to use a linear version in RLlib. |\n",
+    "| 05  | [Linear Thompson Sampling](multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb) | Another popular algorithm for exploration vs. exploitation is _Thompson Sampling_. This lesson shows how to use a linear version in RLlib. |\n",
+    "| 06  | [Market Example](multi-armed-bandits/06-Market-Example.ipynb) | A simplified real-world example of MABs, finding the optimal stock and bond investment strategy. |\n",
+    "\n",
+    "In addition, exercise solutions for this segment of the tutorial can be found [here](multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Learning Plan\n",
+    "\n",
+    "We recommend the following _learning plan_ for working through the lessons:\n",
+    "\n",
+    "Start with the overview material for RL and RLlib:\n",
+    "\n",
+    "* [Ray RLlib Overview](00-Ray-RLlib-Overview.iypnb)\n",
+    "* [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) \n",
+    "* [Introduction to RLlib](02-Introduction-to-RLlib.ipynb)\n",
+    "\n",
+    "Then study several of the lessons for MABs, starting with these lessons:\n",
+    "\n",
+    "* [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb)\n",
+    "* [Introduction to Multi-Armed Bandits](multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb)\n",
+    "* [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.iypnb): Skim at least the first part of this lesson. \n",
+    "* [Simple Multi-Armed Bandit](multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb)\n",
+    "\n",
+    "As time permits, study one or both of the following lessons:\n",
+    "\n",
+    "* [Linear Upper Confidence Bound](multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb)\n",
+    "* [Linear Thompson Sampling](multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb)\n",
+    "\n",
+    "Then finish with this more complete example:\n",
+    "\n",
+    "* [Market Example](multi-armed-bandits/06-Market-Example.ipynb)\n",
+    "\n",
+    "Next, return to the \"core\" RL lessons:\n",
+    "\n",
+    "Study the popular _CartPole_ example:\n",
+    "\n",
+    "* [Application: Cart Pole](03-Application-Cart-Pole.ipynb)\n",
+    "\n",
+    "If time permits, study one or more of these examples:\n",
+    "\n",
+    "* [Application: Mountain Car](04a-Application-Mountain-Car.ipynb)\n",
+    "* [Application: Taxi](04b-Application-Taxi.ipynb)\n",
+    "* [Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb)\n",
+    "\n"
    ]
   },
   {
